- Randomize Race Laps: Rings of Uranus now randomized between 3 and 12 laps.

Rayman 3: Hoodlum Havoc
- Mod Menu+ enabled (GCN) - Change UI textures, icons
- New feature: Randomize Sub-Level Order
- New feature: Randomize Outfit Colors (GCN)
- New feature: Randomize Copter Colors (GCN)
- New feature: Randomize HUD Colors (GCN)

Crash Bandicoot
- New feature: Randomize Wooden Crates
- Backwards Hog Levels: Removed checkpoints since they didn't work anyway.
- Randomize Crate Contents: No longer randomizes boulder levels.
- Backwards Levels: Wider Camera Field-Of-View enabled by default for backwards levels. (normal FOV for forward levels)

Crash Bandicoot 2: Cortex Strikes Back
- New feature: Randomize Wooden Crates
- New feature: Random Crates Removed
- New feature: Randomize Crate Parameters
- New feature: Random Enemies Removed
- New feature: Random/All Crates Are Invisible
- New feature: Randomize World Textures
- New feature: Randomize Object Colors
- New feature: Randomize Object Textures
- New feature: Randomize Streamed Audio
- New feature: Swizzle Object Palette
- New feature: Greyscale Objects
- New feature: Randomize Pants Color
- Pants color can now be customized in the Mod Menu.
- Randomize Crate Counter: Adjusted minimum counts to prevent impossible scenarios.

Crash Bandicoot: WARPED
- New feature: Randomize Wooden Crates
- New feature: Random Crates Removed
- New feature: Randomize Crate Parameters
- New feature: Random Enemies Removed
- New feature: Remove Warp Room Barriers
- New feature: Random/All Crates Are Invisible
- New feature: Randomize World Textures
- New feature: Randomize Object Colors
- New feature: Randomize Object Textures
- New feature: Randomize Streamed Audio
- New feature: Swizzle Object Palette
- New feature: Greyscale Objects
- New feature: Randomize Pants Color
- Pants color can now be customized in the Mod Menu.
- Randomize Crate Counter: Adjusted minimum counts to prevent impossible scenarios.